--- a/.gitignore
+++ b/.gitignore
@@ -22,8 +22,12 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-
-pages
+Home
+Register
+Login
 Layouts
 Contexts
-# routes
+Course
+Header
+Courses
+CourseCard
